--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "firebase": "^9.6.8",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
@@ -15,5 +16,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
     "vite": "^2.8.0"
+  },
+  "engines": {
+    "node": ">= 14.19.0",
+    "npm": ">= 6.14.16"
   }
 }
